@@ -64,7 +64,7 @@
 [% IF config.twitter.0 -%]
    [% FOREACH handle = config.twitter -%]
                      <div class="twitter">
-                        <iframe allowtransparency="true" frameborder="0" scrolling="no" style="width:162px; height:20px;" src="https://platform.twitter.com/widgets/follow_button.html?screen_name=[% handle %]&amp;show_count=false"></iframe>
+                        <iframe style="width:162px; height:20px;" src="https://platform.twitter.com/widgets/follow_button.html?screen_name=[% handle %]&amp;show_count=false"></iframe>
                      </div>
    [% END -%]
 [% END -%]
