@@ -120,7 +120,7 @@
             <div class="well well-sidebar">
 [%    FOREACH handle = config.twitter -%]
                <div class="twitter">
-                  <iframe allowtransparency="true" frameborder="0" scrolling="no" style="width:162px; height:20px;" src="https://platform.twitter.com/widgets/follow_button.html?screen_name=[% handle %]&amp;show_count=false"></iframe>
+                  <iframe style="width:162px; height:20px;" src="https://platform.twitter.com/widgets/follow_button.html?screen_name=[% handle %]&amp;show_count=false"></iframe>
                </div>
 [%    END -%]
             </div>
