@@ -7,6 +7,7 @@
    <meta name="description" content="[% page.description %]">
    <meta name="keywords" content="[% page.keywords %]">
    <meta name="author" content="[% page.author %]">
+   <meta name="generator" content="Doh v[% page.application_version %]">
    <meta name="apple-mobile-web-app-capable" content="yes" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 [%    IF config.colours.0 -%]
